--- a/public/styles.css
+++ b/public/styles.css
@@ -894,6 +894,14 @@ input[type="range"]::-ms-fill-lower{
   margin-bottom: 5rem;
 }
 
+.ml-3{
+  margin-left: 0.75rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
 .mt-\[15\%\]{
   margin-top: 15%;
 }
@@ -918,8 +926,16 @@ input[type="range"]::-ms-fill-lower{
   margin-top: 2.5rem;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .mt-8{
   margin-top: 2rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
 }
 
 .mb-32{
@@ -938,22 +954,6 @@ input[type="range"]::-ms-fill-lower{
   margin-top: 0.5rem;
 }
 
-.mt-\[10\%\]{
-  margin-top: 10%;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -964,10 +964,6 @@ input[type="range"]::-ms-fill-lower{
 
 .mt-14{
   margin-top: 3.5rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
 }
 
 .block{
@@ -994,12 +990,12 @@ input[type="range"]::-ms-fill-lower{
   display: none;
 }
 
-.h-\[100vh\]{
-  height: 100vh;
-}
-
 .h-6{
   height: 1.5rem;
+}
+
+.h-\[100vh\]{
+  height: 100vh;
 }
 
 .h-screen{
@@ -1022,8 +1018,8 @@ input[type="range"]::-ms-fill-lower{
   width: 100%;
 }
 
-.w-\[50\%\]{
-  width: 50%;
+.w-6{
+  width: 1.5rem;
 }
 
 .w-\[80\%\]{
@@ -1046,12 +1042,12 @@ input[type="range"]::-ms-fill-lower{
   width: 90%;
 }
 
-.w-28{
-  width: 7rem;
+.w-\[50\%\]{
+  width: 50%;
 }
 
-.w-6{
-  width: 1.5rem;
+.w-28{
+  width: 7rem;
 }
 
 .w-64{
@@ -1060,6 +1056,10 @@ input[type="range"]::-ms-fill-lower{
 
 .w-\[2000px\]{
   width: 2000px;
+}
+
+.max-w-md{
+  max-width: 28rem;
 }
 
 .max-w-screen-sm{
@@ -1079,16 +1079,12 @@ input[type="range"]::-ms-fill-lower{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1183,20 +1179,20 @@ input[type="range"]::-ms-fill-lower{
   overflow-y: auto;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
-.rounded-full{
-  border-radius: 9999px;
-}
-
 .rounded-lg{
   border-radius: 0.5rem;
 }
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-xl{
@@ -1219,6 +1215,10 @@ input[type="range"]::-ms-fill-lower{
   border-bottom-right-radius: 0.375rem;
 }
 
+.border{
+  border-width: 1px;
+}
+
 .border-2{
   border-width: 2px;
 }
@@ -1227,16 +1227,22 @@ input[type="range"]::-ms-fill-lower{
   border-width: 0px;
 }
 
-.border{
-  border-width: 1px;
-}
-
 .border-4{
   border-width: 4px;
 }
 
 .border-b-2{
   border-bottom-width: 2px;
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .border-\[\#00A396\]{
@@ -1259,16 +1265,6 @@ input[type="range"]::-ms-fill-lower{
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.border-gray-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
 .border-green-700{
   --tw-border-opacity: 1;
   border-color: rgb(4 108 78 / var(--tw-border-opacity));
@@ -1283,9 +1279,9 @@ input[type="range"]::-ms-fill-lower{
   background-color: transparent;
 }
 
-.bg-\[\#00A396\]{
+.bg-green-700{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 163 150 / var(--tw-bg-opacity));
+  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
 }
 
 .bg-lightBg{
@@ -1322,11 +1318,6 @@ input[type="range"]::-ms-fill-lower{
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-green-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(4 108 78 / var(--tw-bg-opacity));
-}
-
 .bg-green-500{
   --tw-bg-opacity: 1;
   background-color: rgb(14 159 110 / var(--tw-bg-opacity));
@@ -1345,11 +1336,6 @@ input[type="range"]::-ms-fill-lower{
 .bg-green-100{
   --tw-bg-opacity: 1;
   background-color: rgb(222 247 236 / var(--tw-bg-opacity));
-}
-
-.bg-blue-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 86 219 / var(--tw-bg-opacity));
 }
 
 .bg-green-400{
@@ -1388,12 +1374,12 @@ input[type="range"]::-ms-fill-lower{
   padding: 0.5rem;
 }
 
-.p-1{
-  padding: 0.25rem;
-}
-
 .p-4{
   padding: 1rem;
+}
+
+.p-1{
+  padding: 0.25rem;
 }
 
 .p-2\.5{
@@ -1407,6 +1393,26 @@ input[type="range"]::-ms-fill-lower{
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 
 .py-8{
@@ -1454,14 +1460,9 @@ input[type="range"]::-ms-fill-lower{
   padding-right: 2rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-28{
-  padding-left: 7rem;
-  padding-right: 7rem;
+.px-9{
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
 }
 
 .py-9{
@@ -1469,29 +1470,19 @@ input[type="range"]::-ms-fill-lower{
   padding-bottom: 2.25rem;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .py-10{
@@ -1504,14 +1495,12 @@ input[type="range"]::-ms-fill-lower{
   padding-bottom: 0.75rem;
 }
 
-.px-9{
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
+.pl-3{
+  padding-left: 0.75rem;
 }
 
-.py-7{
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+.pr-4{
+  padding-right: 1rem;
 }
 
 .pt-10{
@@ -1520,6 +1509,10 @@ input[type="range"]::-ms-fill-lower{
 
 .pb-20{
   padding-bottom: 5rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .pb-10{
@@ -1534,20 +1527,16 @@ input[type="range"]::-ms-fill-lower{
   padding-top: 0.75rem;
 }
 
-.pl-3{
-  padding-left: 0.75rem;
-}
-
-.pr-4{
-  padding-right: 1rem;
-}
-
 .pt-4{
   padding-top: 1rem;
 }
 
 .pt-20{
   padding-top: 5rem;
+}
+
+.pb-7{
+  padding-bottom: 1.75rem;
 }
 
 .text-center{
@@ -1558,12 +1547,17 @@ input[type="range"]::-ms-fill-lower{
   text-align: right;
 }
 
+.font-montserrat{
+  font-family: Montserrat, sans-serif;
+}
+
 .font-inter{
   font-family: Inter, sans-serif;
 }
 
-.font-montserrat{
-  font-family: Montserrat, sans-serif;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-5xl{
@@ -1571,8 +1565,9 @@ input[type="range"]::-ms-fill-lower{
   line-height: 1;
 }
 
-.text-\[25px\]{
-  font-size: 25px;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-3xl{
@@ -1580,18 +1575,13 @@ input[type="range"]::-ms-fill-lower{
   line-height: 2.25rem;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-\[20px\]{
   font-size: 20px;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-lg{
@@ -1607,6 +1597,14 @@ input[type="range"]::-ms-fill-lower{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[25px\]{
+  font-size: 25px;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .font-bold{
@@ -1625,10 +1623,6 @@ input[type="range"]::-ms-fill-lower{
   font-weight: 300;
 }
 
-.font-medium{
-  font-weight: 500;
-}
-
 .italic{
   font-style: italic;
 }
@@ -1643,6 +1637,11 @@ input[type="range"]::-ms-fill-lower{
 
 .leading-10{
   line-height: 2.5rem;
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1674,9 +1673,9 @@ input[type="range"]::-ms-fill-lower{
   color: #0000004D;
 }
 
-.text-links{
+.text-gray-200{
   --tw-text-opacity: 1;
-  color: rgb(26 26 26 / var(--tw-text-opacity));
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -1694,19 +1693,9 @@ input[type="range"]::-ms-fill-lower{
   color: rgb(4 108 78 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-gray-700{
@@ -1735,14 +1724,14 @@ input[type="range"]::-ms-fill-lower{
   transition-duration: 150ms;
 }
 
-.hover\:bg-blue-400:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:text-gray-900:hover{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -1791,14 +1780,14 @@ input[type="range"]::-ms-fill-lower{
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .dark .dark\:placeholder-gray-400::-moz-placeholder{
@@ -1857,16 +1846,12 @@ input[type="range"]::-ms-fill-lower{
 }
 
 @media (min-width: 768px){
-  .md\:mb-0{
-    margin-bottom: 0px;
-  }
-
   .md\:mt-0{
     margin-top: 0px;
   }
 
-  .md\:mt-\[15\%\]{
-    margin-top: 15%;
+  .md\:mb-0{
+    margin-bottom: 0px;
   }
 
   .md\:block{
@@ -1885,16 +1870,16 @@ input[type="range"]::-ms-fill-lower{
     display: none;
   }
 
-  .md\:h-\[100vh\]{
-    height: 100vh;
-  }
-
-  .md\:w-\[80\%\]{
-    width: 80%;
+  .md\:w-auto{
+    width: auto;
   }
 
   .md\:w-\[50\%\]{
     width: 50%;
+  }
+
+  .md\:w-\[80\%\]{
+    width: 80%;
   }
 
   .md\:w-\[90\%\]{
@@ -1905,10 +1890,6 @@ input[type="range"]::-ms-fill-lower{
     width: 40%;
   }
 
-  .md\:w-auto{
-    width: auto;
-  }
-
   .md\:max-w-sm{
     max-width: 24rem;
   }
@@ -1917,16 +1898,16 @@ input[type="range"]::-ms-fill-lower{
     max-width: 36rem;
   }
 
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -1959,10 +1940,6 @@ input[type="range"]::-ms-fill-lower{
     border-width: 0px;
   }
 
-  .md\:bg-transparent{
-    background-color: transparent;
-  }
-
   .md\:p-0{
     padding: 0px;
   }
@@ -1972,9 +1949,24 @@ input[type="range"]::-ms-fill-lower{
     padding-right: 2.5rem;
   }
 
-  .md\:py-0{
-    padding-top: 0px;
-    padding-bottom: 0px;
+  .md\:py-9{
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+  }
+
+  .md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:py-1{
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .md\:py-32{
+    padding-top: 8rem;
+    padding-bottom: 8rem;
   }
 
   .md\:pt-20{
@@ -1985,51 +1977,41 @@ input[type="range"]::-ms-fill-lower{
     text-align: left;
   }
 
+  .md\:text-\[25px\]{
+    font-size: 25px;
+  }
+
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .md\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
   }
 
-  .md\:text-8xl{
-    font-size: 6rem;
+  .md\:text-6xl{
+    font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .md\:text-\[25px\]{
-    font-size: 25px;
-  }
-
-  .md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-9xl{
-    font-size: 8rem;
-    line-height: 1;
-  }
-
-  .md\:text-blue-700{
-    --tw-text-opacity: 1;
-    color: rgb(26 86 219 / var(--tw-text-opacity));
   }
 
   .md\:hover\:bg-transparent:hover{
     background-color: transparent;
   }
 
-  .md\:hover\:text-blue-700:hover{
+  .md\:hover\:text-green-400:hover{
     --tw-text-opacity: 1;
-    color: rgb(26 86 219 / var(--tw-text-opacity));
-  }
-
-  .dark .md\:dark\:text-blue-500{
-    --tw-text-opacity: 1;
-    color: rgb(63 131 248 / var(--tw-text-opacity));
+    color: rgb(49 196 141 / var(--tw-text-opacity));
   }
 
   .dark .md\:dark\:hover\:bg-transparent:hover{
     background-color: transparent;
+  }
+
+  .dark .md\:dark\:hover\:text-green-400:hover{
+    --tw-text-opacity: 1;
+    color: rgb(49 196 141 / var(--tw-text-opacity));
   }
 
   .dark .md\:dark\:hover\:text-blue-500:hover{
@@ -2039,10 +2021,6 @@ input[type="range"]::-ms-fill-lower{
 }
 
 @media (min-width: 1024px){
-  .lg\:mb-16{
-    margin-bottom: 4rem;
-  }
-
   .lg\:block{
     display: block;
   }
