--- a/src/indexStyle.css
+++ b/src/indexStyle.css
@@ -6,6 +6,7 @@
  margin:0;
  box-sizing: border-box;
  font-family: 'Montserrat';
+ scroll-behavior: smooth;
 }
 .acaspedia{
  font-family: 'Lemon', cursive;
@@ -14,4 +15,37 @@
 }
 .cardHeight{
  height: 298px;
+}
+.blogcard{
+ padding: 2rem 3rem;
+}
+.course-btn{
+ position:relative;
+ bottom:.4rem;
+}
+.links{
+ cursor: pointer;
+}
+.inputStyle{
+ border: 2px solid #004741;
+}
+
+.scroll-transition {
+ opacity: 0; /* Initially hidden */
+ transform: translateY(20px); /* Initial position */
+ transition: opacity 0.6s ease, transform 0.6s ease/* Transition properties */
+}
+
+.scroll-transition.show {
+ opacity: 1; /* Visible when scrolled into view */
+ transform: translateY(0); /* /* Final transform properties */
+}
+
+
+
+
+@media screen and (max-width:768px) {
+ .course-btn{
+  bottom: 0;
+ }
 }
